[package]
name = "godot_rust_test_rs"
version = "0.1.0"
authors = ["containercat <mail@containercat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = { git = "https://github.com/GodotNativeTools/godot-rust" }
gdnative-sys = { git = "https://github.com/GodotNativeTools/godot-rust" }
astra = { git = "https://github.com/rustmain/astra-rust" }
libc = "0.2"
num_cpus = "1.10.1"